update and add new emails to write

--- a/scott.org
+++ b/scott.org
@@ -1,6 +1,8 @@
 * ALL TODO
 ** Hot
 *** TODO send email to travis
+*** TODO send email about notes from meetings
+*** TODO Work on new markdown version of site
 *** TODO Look over issues
 
 
