A few emails added on

--- a/scott.org
+++ b/scott.org
@@ -1,5 +1,8 @@
 * ALL TODO
-** TODO RTU Client work
+** TODO Email Julian
+** TODO Email Lindsay
 ** TODO Murica Review, finish up and add notes 1 pomodoro!
-** TODO Send Poseidon email
-
+** TODO Intern Review 2 pomodoro!
+** TODO Marketing review 1 pomodoro!
+** TODO RTU Client work 2 Pomodoro
+** DONE James TMobile 1 pomodoro!
