--- a/scott.org
+++ b/scott.org
@@ -1,6 +1,10 @@
 * ALL TODO
-** TODO Email Julian
-** TODO Email Lindsay
+** TODO Emails 2 Pomodoro
+*** TODO Email Julian
+*** TODO Email Lindsay
+*** TODO Email Jvilla
+*** TODO Email code 4 okc
+** TODO Send progress report
 ** TODO Murica Review, finish up and add notes 1 pomodoro!
 ** TODO Intern Review 2 pomodoro!
 ** TODO Marketing review 1 pomodoro!
