--- a/scott.org
+++ b/scott.org
@@ -1,8 +1,14 @@
 * ALL TODO
 ** TODO RTU Client work 2 Pomodoro
-** TODO Track Kristin for expected deadline
-** TODO Intern Review 2 pomodoro!
+*** TODO Add new module for network disruption
+*** TODO Simulate network disruption
 ** TODO Marketing review 1 pomodoro!
 ** TODO OnPing News Letter <2016-09-23 Fri>
-** TODO Email Lindsay
-** TODO Email Julian
+** DONE Track Kristin for expected deadline
+** DONE Intern Review 2 pomodoro!
+** DONE Emails 2 Pomodoro
+*** DONE Email Chris
+*** DONE Email Jonathan
+*** DONE Email Jeff
+*** DONE Email Lindsay
+*** DONE Email Julian
