--- a/scott.org
+++ b/scott.org
@@ -1,9 +1,9 @@
 * ALL TODO
-** TODO Get Spectrum Analyzer Ready
-** TODO Fix terrible bug in Roc
-** TODO Get Camera Info for Brad
-** TODO Order Other Parts for Brad
-** TODO Respond to Rebellion
-** TODO Draft Quote for Pump Off Controller
-** TODO Fix SimpleStore fsync problem
-** TODO Email Darren, Duncan and Rob
+** TODO Fix SimpleStore fsync problem - 1 Pomodoro
+** TODO Order Other Parts for Brad - 1 Pomodoro
+** TODO Email Darren, Duncan and Rob - 1 Pomodoro
+** TODO Get Camera Info for Brad - 2 Pomodoro
+** TODO Respond to Rebellion - 3 Pomodoro
+** TODO Get Spectrum Analyzer Ready - 3 Pomodoro
+** TODO Draft Quote for Pump Off Controller - 3 Pomodoro
+** DONE Fix terrible bug in Roc - 3 Pomodoro
