--- a/scott.org
+++ b/scott.org
@@ -1,13 +1,7 @@
 * ALL TODO
-** TODO Read over Murica                  -  1 P
-** TODO Email James' Candidate            - .5 P
-** TODO Email Tamur (second response)     - .5 P
-** TODO Read POC papers                   -  1 P
-** TODO Finish Camera                     -  1 P
-** DONE email Tamur                        
-** DONE Work on =rtu-client=              - 4 P
-*** DONE see if any timing changes hclose behavior
-Changing the timing to 1m definitely fixes the hclose problem
-which means the fsync is just not completing.  yet things aren't blocked...
-Whyyyy!
-*** DONE Can I change some other property of sync to make things behave
+** TODO Micrologix fix to use new simple store -  1 P
+** TODO POC doc review                         -  4 P
+** TODO Email James' Candidate                 - .5 P
+** TODO Email Tamur (second response)          - .5 P
+** TODO Read POC papers                        -  1 P
+** TODO Finish Camera                          -  1 P
