--- a/scott.org
+++ b/scott.org
@@ -1,4 +1,6 @@
 * ALL TODO
+** TODO Emails 1P
+** TODO rtu-client more closed 3P
 ** TODO Finish FD solver for finite difference  -  2   P
 *** TODO Add Test Data for forcing function
 *** TODO Write grid generator
@@ -7,5 +9,4 @@
 *** TODO Verification tests
 **** TODO Numerical fitness tests
 **** TODO CS completeness tests
-** TODO Email James' Candidate                  -  0.5 P
 ** TODO Email Darren intern                     -  1   P
