--- a/scott.org
+++ b/scott.org
@@ -1,29 +1,20 @@
 * ALL TODO
-** TODO Review email call text
-** TODO Dario email and tag count
-** TODO Dewey Email and tag count
-** TODO BLINK
-*** TODO Check over BLE Protobuf
-*** TODO Check status of ble project
-*** DONE Review BOM for Kevin
-*** DONE Check on Proto case shipment - Wednesday
-*** DONE Check on dev kit shipment    - Tuesday
-*** TODO Support Requirements
-*** TODO Offer letters
 
-** TODO Puzzle out Plunger Lift App
-** TODO Dover POC look over
-** TODO Add choate dashboard stuff
-** TODO POC Project
-*** TODO Review Board for POC
-*** TODO Finish FD solver for finite difference  -  2   P
-**** TODO Verification tests
-**** TODO Debug wave equation
-**** TODO Write grid generator
-**** TODO CS completeness tests
-**** TODO Numerical fitness tests
-**** TODO Write boundary condtion functions
-**** TODO Find some sort of Validation data
-**** TODO Add Test Data for forcing function
-*** DONE Email for quotes on inclinometer
-** TODO Presentation write example shakespeare text thing
+** DONE Email Mujahid
+
+** DONE Email Andrej
+
+** DONE Pay Invoice for Next Thing Co
+
+** DONE Email Next Thing Co
+
+** DONE Fix Laser Cutter
+
+** TODO Blink
+
+*** DONE Add wifi settings
+
+*** DONE Investigate timeout times
+
+*** TODO Add license
+
