--- a/scott.org
+++ b/scott.org
@@ -1,7 +1,12 @@
 * ALL TODO
-
-** TODO Blink
-
-*** TODO Add license
-
-
+** TODO Call CJ about panels
+** TODO Checks to bank
+** TODO Invoice for blinks
+** TODO Calendar check
+** TODO Get Lid cuts
+** TODO Run through numbers
+** TODO Look over Mujahid stuff
+** TODO Check with Andrej
+** TODO Intern follow up
+** TODO Check in on Tag Info project
+** TODO Lorenzo finish and send out 
