--- a/scott.org
+++ b/scott.org
@@ -1,6 +1,11 @@
 * ALL TODO
-** TODO HSSE Paperwork from Lance and Dee Dee
+** DONE HSSE Paperwork from Lance and Dee Dee
    SCHEDULED: <2017-06-21 Wed>
    DEADLINE: <2017-06-22 Thu>
+** TODO Email Stone bridge
+   SCHEDULED: <2017-06-21 Wed>
+   DEADLINE: <2017-06-21 Wed>
+   PERSON: Jeremy.Funk@sbti.com
 ** TODO Microload Device
 ** TODO Shirts and Hats
+
